=================================
Changes for Crate Admin Interface
=================================

Unreleased
==========

2015/06/29 0.14.0
=================

 - load plugins.json that can inject additional modules on app start
   the "Get Started" tutorial is now implemented as a plugin

2015/06/23 0.13.4
=================

 - fix: approximate number of underreplicated and missing records per table was
   calculated incorrectly, which could have lead to different results
   when viewing table info on admin ui of different nodes

2015/06/22 0.13.3
=================

 - fix: automatically refresh load history chart on overview page

2015/06/15 0.13.2
=================

 - improved layout for smaller screens

 - fix: highlight cluster navigation item also when node is selected

 - fix: crate process cpu will now also display values greater than 100%

2015/06/09 0.13.1
=================

 - fix: load graph was not displayed when no tables where available

2015/06/09 0.13.0
=================

 - improved load graph on overview page

 - display load, cpu usage, disk i/o, process stats and shard information
   on node detail page

  - added columns with partition values on "Partitions" table
    on table detail view

2015/05/22 0.12.1
=================

  - update logo, favicons

2015/04/23 0.12.0
=================

  - display ``rest_url`` from sys.nodes table on node detail view

2015/04/09 0.11.5
=================

  - fix: concurrent ajax requests caused partition information
    in table detail view to be mixed up between tables

2015/03/05 0.11.4
=================

 - fix: calculate health for each partition of a partitioned table
   based on the number of shards of that partition

2015/02/04 0.11.3
=================

 - fixed bug that showed custom schemas in the table list
   as often as the amount of tables in that custom schema

2015/01/15 0.11.2
=================

 - removed usage of sys expressions in wrong context
